README text edited

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <br />
        Droid-Break is a list of free and open source Android apps inspired by <a href="https://prism-break.org">prism-break.org.</a> We want to show you high quality alternatives to the big proprietary solutions.<br />
        Please note that open source apps don't guarantee absolute freedom, e.g. an open source Twitter client still sends everything to Twitters' servers.<br />
-       Anyway, we believe it's the best we can come up with though and in many cases it's the better choice.<br />
+       Anyway, we believe it's the best we can come up with and that in many cases it's the better choice.<br />
        If you think an app is missing, please write an <a href="support.html">email</a> or fork the project on <a href="https://github.com/repat/droid-break">github</a> and make a pull request.<br />
       </p>
       
