redphone desc, readme github/neocities sync

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
       
       <p><div class="media emph-Block">
-      	  <div class="media-Object">
+          <div class="media-Object">
 					<a href="#!" class="pic-Rounded">
 						<img src="underconstruction.png" alt="underconstruction" width="50" height="50" />
 					</a>
@@ -310,7 +310,7 @@
 				<div class="media-Text">
 					<h1 class="eps">Redphone</h1>
 					<p>
-						Redphone uses end-to-end encryption and standard technologies like SIP.
+						Redphone uses end-to-end encryption and their own network. Very easy to use. Requires to sign up.
 					</p>
           <ul>
             <li>Price: free</li>
