--- a/index.html
+++ b/index.html
@@ -445,6 +445,8 @@
         <td style="width:10%">
             <ul>
               <li><img src="gmail.png" alt="gmail" width="25" height="25"/> &nbsp; GMail</li>
+              <li><img src="aquamail.png" alt="aquamail" width="25" height="25"/> &nbsp; Aqua Mail</li>
+              <li><img src="maildroid.png" alt="maildroid" width="25" height="25"/> &nbsp; MailDroid</li>
             </ul>
         </td>
         
@@ -701,3 +703,4 @@
   <script type="text/javascript" href="http://code.jquery.com/jquery-2.0.2.min.js"></script>
   <script type="text/javascript" href="myslide.js"></script>
 </html>
+
