--- a/index.html
+++ b/index.html
@@ -319,6 +319,26 @@
           </ul>
 				</div>
 			</div>
+      
+      <!-- Sipdroid -->
+        <div class="media emph-Block">
+      	  <div class="media-Object">
+					<a href="#!" class="pic-Rounded">
+						<img src="sipdroid.png" alt="redphone" width="50" height="50" />
+					</a>
+				</div>
+				<div class="media-Text">
+					<h1 class="eps">Sipdroid</h1>
+					<p>
+						Easy to use SIP-client
+					</p>
+          <ul>
+            <li>Price: free</li>
+            <li>Min. Android version: 1.5+</li>
+            <li><a href="http://code.google.com/p/sipdroid/">Sourcecode</a></li>
+          </ul>
+				</div>
+			</div>
         </td>
         
       <!-- VoIP:Notes -->
@@ -703,4 +723,3 @@
   <script type="text/javascript" href="http://code.jquery.com/jquery-2.0.2.min.js"></script>
   <script type="text/javascript" href="myslide.js"></script>
 </html>
-
