--- a/credits.html
+++ b/credits.html
@@ -3,7 +3,7 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <title>
-      Site not found
+      Credits
     </title>
     <link href="http://groundfloor.neocities.org/default.css" media="all" rel="stylesheet" type="text/css" />
     <link href="brass-min.css" rel="stylesheet" type="text/css" media="all" />
