--- a/sources.html
+++ b/sources.html
@@ -3,7 +3,7 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <title>
-      Site not found
+      Sources
     </title>
     <link href="http://groundfloor.neocities.org/default.css" media="all" rel="stylesheet" type="text/css" />
     <link href="brass-min.css" rel="stylesheet" type="text/css" media="all" />
@@ -12,7 +12,7 @@
   <body>
     <div class="txt-Center">
       <h1>
-        Credits
+        Sources
       </h1>
       <p>
          <p><div class="media emph-Block">
