small update + about.html + favicon

--- a/not_found.html
+++ b/not_found.html
@@ -3,11 +3,13 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <title>
-      Site not found
+      Site not found - droid-break.info
     </title>
     <link href="http://groundfloor.neocities.org/default.css" media="all" rel="stylesheet" type="text/css" />
     <link href="brass-min.css" rel="stylesheet" type="text/css" media="all" />
     <!--[if lt IE 9]> <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
+      <!-- local copy of jquery 2.0.2 -->
+  <script type="text/javascript" src="jquery-2.0.2.min.js"></script>
   </head>
   <body>
     <div class="txt-Center">
@@ -21,12 +23,12 @@
      <!-- Footer -->
     <footer>
       <p>
-        <a href="/">Home</a> - <a href="sources.html">Sources</a> - <a href="credits.html">Credits</a> - <a href="support.html">Support</a>
+        <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a>
+        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a> - Last update: 29. July 2013, 11:51
       </p>
     </footer>
   </body>
-  <script type="text/javascript" href="http://code.jquery.com/jquery-2.0.2.min.js"></script>
+  
 </html>
