--- a/support.html
+++ b/support.html
@@ -3,12 +3,13 @@
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <title>
-      Droid-break - Support
+      Support - droid-break.info
     </title>  
     <link href="http://groundfloor.neocities.org/default.css" media="all" rel="stylesheet" type="text/css" />
     <link href="brass-min.css" rel="stylesheet" type="text/css" media="all" />
     <!--[if lt IE 9]> <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
-    
+      <!-- local copy of jquery 2.0.2 -->
+  <script type="text/javascript" src="jquery-2.0.2.min.js"></script>
   </head>
   <body>
     <div class="txt-Center">
@@ -25,17 +26,16 @@
      <script id='flattrbtn'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=repat&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('flattrbtn');</script>
      </p>
       <p><a class="coinbase-button" data-code="05839045d4b044406d8c387be73c7681" data-button-style="donation_small" href="https://coinbase.com/checkouts/05839045d4b044406d8c387be73c7681">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script></p>
-      <p>rep<a href="http://www.google.com/recaptcha/mailhide/d?k=01lH5hX0_hFYMQfjwH3bYz_A==&amp;c=9ncD0d-HxhIQSnQw3NxUKg==" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501lH5hX0_hFYMQfjwH3bYz_A\75\75\46c\759ncD0d-HxhIQSnQw3NxUKg\75\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@repat.de</p>
+      <p>droi<a href="http://www.google.com/recaptcha/mailhide/d?k=01EETeR_a0xkPKgFHu-BZsyg==&amp;c=3BDblcAhTutl4E6k9Ho0BnTKRsthjIjkBBIN_RBExC4=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501EETeR_a0xkPKgFHu-BZsyg\75\75\46c\0753BDblcAhTutl4E6k9Ho0BnTKRsthjIjkBBIN_RBExC4\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@repat.de</p>
     </div>
      <!-- Footer -->
     <footer>
-      <p>
-        <a href="/">Home</a> - <a href="sources.html">Sources</a> - <a href="credits.html">Credits</a> - <a href="support.html">Support</a>
+       <p>
+        <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a>
+        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a> - Last update: 29. July 2013, 11:51
       </p>
     </footer>
   </body>
-  <script type="text/javascript" href="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 </html>
