added couple of apps, nearly finished

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       <p>This project uses <a href="https://jquery.org/license/">jQuery</a>, which is released under the <a href="https://jquery.org/license/">MIT License</a> and Groundfloor/Brass-Tacks (no license known).
       
       <h3>Contact</h3>
-      If you have any questions contact me under droi<a href="http://www.google.com/recaptcha/mailhide/d?k=01EETeR_a0xkPKgFHu-BZsyg==&amp;c=3BDblcAhTutl4E6k9Ho0BnTKRsthjIjkBBIN_RBExC4=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501EETeR_a0xkPKgFHu-BZsyg\75\75\46c\0753BDblcAhTutl4E6k9Ho0BnTKRsthjIjkBBIN_RBExC4\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@repat.de</a>.
+      If you have any questions contact me under droi<a href="http://www.google.com/recaptcha/mailhide/d?k=01EETeR_a0xkPKgFHu-BZsyg==&amp;c=3BDblcAhTutl4E6k9Ho0BnTKRsthjIjkBBIN_RBExC4=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501EETeR_a0xkPKgFHu-BZsyg\75\75\46c\0753BDblcAhTutl4E6k9Ho0BnTKRsthjIjkBBIN_RBExC4\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">...</a>@repat.de</a> or on Twitter under <a href="https://twitter.com/droidbreak">@droidbreak</a>.
     
      <!-- Footer -->
     <footer>
