--- a/sources.html
+++ b/sources.html
@@ -59,11 +59,11 @@
      <!-- Footer -->
      
     <footer>
-      <p>
-        <a href="/">Home</a> - <a href="sources.html">Sources</a> - <a href="credits.html">Credits</a> - <a href="support.html">Support</a>
+        <p>
+        <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a>
+        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a> - Last update: 29. July 2013, 11:51
       </p>
     </footer>
   </body>
