robot.txt, sitemap.xml, minor updates

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
       Droid-Break.info - A list of free alternatives to proprietary android apps
     </title>
     <!-- Meta -->
-    <meta name="description" content="A list of free alternatives to proprietary android apps" />
+    <meta name="description" content="Droid-Break offers a list of free high-quality alternatives to proprietary android apps" />
     <meta name="keywords" content="android,alternative,apps,free,foss,open source,prism-break" />
     <meta name="robots" content="all" />
     
     <!-- Opengraph -->
-    <meta property="og:image" content="http://droidbreak.neocities.org/droidbreak-logo.png" />
+    <meta property="og:image" content="http://droid-break.info/droidbreak-logo-big.png" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:title" content="Droid-Break"/>
     <meta property="og:type" content="website"/>
@@ -101,13 +101,13 @@
         
         <!-- Firefox -->
           <div class="media emph-Block">
-  			  <div class="media-Object">
+    		  <div class="media-Object">
 					<a href="#!" class="pic-Rounded">
 						<img src="firefox.png" alt="firefox" width="50" height="50" />
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Firefox</h1>
+					<h2 class="eps">Firefox</h2>
 					<p>
 						Firefox is a well known browser not only available for the desktop but also for Android.
 					</p>
@@ -131,7 +131,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Tint</h1>
+					<h2 class="eps">Tint</h2>
 					<p>
 						Tint is a fast and lightweight browser.
 					</p>
@@ -154,7 +154,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Zirco Browser</h1>
+					<h2 class="eps">Zirco Browser</h2>
 					<p>
 						Browser with included ad-blocking.
 					</p>
@@ -209,7 +209,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Twimight</h1>
+					<h2 class="eps">Twimight</h2>
 					<p>
 						Twimight is a fast, ad-free twitter-client with a emergency mode that sends your tweets via bluetooth to other twimight users, in case there is a network outage. It's a research project by the <a href="http://www.ethz.ch/index_EN">ETH Z&uuml;rich.</a>
 					</p>
@@ -231,7 +231,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Twidere</h1>
+					<h2 class="eps">Twidere</h2>
 					<p>
 					  Twidere is an feature-rich, ad-free app in the holo-design and comes with a tablet mode.
 					</p>
@@ -255,7 +255,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Impeller</h1>
+					<h2 class="eps">Impeller</h2>
 					<p>
 					  Impeller is one of the first open source mobile clients for <a href="http://pump.io">pump.io</a> and can be used e.g. for <a href="http://identi.ca">identi.ca</a>.
 					</p>
@@ -280,7 +280,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">AndStatus</h1>
+					<h2 class="eps">AndStatus</h2>
 					<p>
 					  AndStatus is a very lightweight Twitter and <a href="http://status.net/">status.net</a>/<a href="http://www.gnu.org/software/social/">GNU Social</a> client that derived from AndTweet. It does not work with identi.ca anymore.
 					</p>
@@ -338,7 +338,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Xabber</h1>
+					<h2 class="eps">Xabber</h2>
 					<p>
 						Xabber is a famous XMPP-Client with OTR support.
 					</p>
@@ -363,7 +363,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Gibberbot</h1>
+					<h2 class="eps">Gibberbot</h2>
 					<p>
 						Gibberbot is a XMPP client with OTR support developed by the <a href="https://guardianproject.info">Guardian Project</a>
 					</p>
@@ -386,7 +386,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Surepot</h1>
+					<h2 class="eps">Surepot</h2>
 					<p>
 						Surepot is an encrypting messenger that's supposed to be as easy as Whatsapp. No iOS Version yet though. They provide their own infrastructure so no external account is needed.
 					</p>
@@ -449,7 +449,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Redphone</h1>
+					<h2 class="eps">Redphone</h2>
 					<p>
 						Redphone uses end-to-end encryption and their own network. Very easy to use. Requires to sign up.
 					</p>
@@ -472,7 +472,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Sipdroid</h1>
+					<h2 class="eps">Sipdroid</h2>
 					<p>
 						Easy to use SIP-client
 					</p>
@@ -494,7 +494,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">CSipSimple</h1>
+					<h2 class="eps">CSipSimple</h2>
 					<p>
 						Easy to use SIP-client that supports encryption.
 					</p>
@@ -516,7 +516,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Linphone Video</h1>
+					<h2 class="eps">Linphone Video</h2>
 					<p>
 						Easy to use SIP-client with video and encryption support.
 					</p>
@@ -575,7 +575,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Vanilla Music</h1>
+					<h2 class="eps">Vanilla Music</h2>
 					<p>
 						Vanilla Music player is a simple but yet sufficient player for mp3, ogg, flac and pcm files. It also supports tags and folders. It's a rewrite of the abadoned original Vanilla Player.
 					</p>
@@ -598,7 +598,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Music Player</h1>
+					<h2 class="eps">Music Player</h2>
 					<p>
 				  	The stock Android music player is actually open source. Not the prettiest but stable and well translated.
 					</p>
@@ -620,7 +620,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">andLess</h1>
+					<h2 class="eps">andLess</h2>
 					<p>
 						andLess plays lossless files(flac, ape, mpc, wv, Apple(.m4a)).
 					</p>
@@ -643,7 +643,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">AntennaPod</h1>
+					<h2 class="eps">AntennaPod</h2>
 					<p>
 						Podcast player for downloading and streaming audio and video podcasts.
 					</p>
@@ -702,7 +702,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">VLC</h1>
+					<h2 class="eps">VLC</h2>
 					<p>
 						VLC is a well known media player
 					</p>
@@ -755,7 +755,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">K-9 Mail</h1>
+					<h2 class="eps">K-9 Mail</h2>
 					<p>
 						K-9 Mail is a feature-rich client that supports POP3, IMAP, Exchange 2003/2007 (with WebDAV) and PGP-encryption.
 					</p>
@@ -808,7 +808,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">OI Notepad</h1>
+					<h2 class="eps">OI Notepad</h2>
 					<p>
 					OI notepad is a simple and lightweight notepad app.
 					</p>
@@ -830,7 +830,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">NoteCipher</h1>
+					<h2 class="eps">NoteCipher</h2>
 					<p>
 					NoteCipher encrypts your notes too.
 					</p>
@@ -883,7 +883,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">ownCloud News Reader</h1>
+					<h2 class="eps">ownCloud News Reader</h2>
 					<p>
 					ownCloud News Reader connects to your <a href="https://owncloud.org">ownCloud</a>-instance and downloads the RSS-feeds.
 					</p>
@@ -905,7 +905,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">MetaFilter</h1>
+					<h2 class="eps">MetaFilter</h2>
 					<p>
             App for the MetaFilter web site: <a href="metafilter.com">metafilter.com</a>
 					</p>
@@ -959,7 +959,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">OI File Manager</h1>
+					<h2 class="eps">OI File Manager</h2>
 					<p>
 					OI File Manager is a file manager with everything you would expect and need.
 					</p>
@@ -982,7 +982,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">File Explorer</h1>
+					<h2 class="eps">File Explorer</h2>
 					<p>
 					 Simple File Explorer.
 					</p>
@@ -1004,7 +1004,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Open Manager</h1>
+					<h2 class="eps">Open Manager</h2>
 					<p>
 					Simple File Manager. Also a version for tablets
 					</p>
@@ -1058,7 +1058,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">OSMAnd</h1>
+					<h2 class="eps">OSMAnd</h2>
 					<p>
 					OSMAnd uses OpenStreetMap material, offline navigation is possible.
 					</p>
@@ -1114,7 +1114,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Hackers Keyboard</h1>
+					<h2 class="eps">Hackers Keyboard</h2>
 					<p>
 					  Hackers Keyboard offers support for different languags and <a href="https://play.google.com/store/apps/developer?id=Klaus+Weidner">completion support</a>. It's also great for Tab/Ctrl/Esc keys, a number bar and arrow keys, in case you are missing a hardware button.
 					</p>
@@ -1137,7 +1137,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">AnySoftKeyboard</h1>
+					<h2 class="eps">AnySoftKeyboard</h2>
 					<p>
 					  AnySoftKeyboard offers <a href="https://play.google.com/store/apps/developer?id=Menny+Even+Danan">multiple anguages with completion support</a>, swipe gestures, multitouch and much more.
 					</p>
@@ -1194,7 +1194,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Owncloud</h1>
+					<h2 class="eps">Owncloud</h2>
 					<p>
 					  Connects to an <a href="http://owncloud.org">owncloud</a> instance.
 					</p>
@@ -1250,7 +1250,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">OI Flashlight</h1>
+					<h2 class="eps">OI Flashlight</h2>
 					<p>
 					Simple flashlight that uses either display or the camera LED.
 					</p>
@@ -1273,7 +1273,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">ZXing Barcode Scanner</h1>
+					<h2 class="eps">ZXing Barcode Scanner</h2>
 					<p>
 					Scans barcodes and QR-codes
 					</p>
@@ -1295,7 +1295,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">c:geo</h1>
+					<h2 class="eps">c:geo</h2>
 					<p>
 					Geocaching client for geocaching.com. With OpenStreetMap and offline support. 
 					</p>
@@ -1318,7 +1318,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">FBReader</h1>
+					<h2 class="eps">FBReader</h2>
 					<p>
 					FBReader supports the most common ebook formats as well as a couple of ebook stores . Expandable with add-ons.
 					</p>
@@ -1341,7 +1341,7 @@
 					</a>
 				</div>
 				<div class="media-Text">
-					<h1 class="eps">Prey</h1>
+					<h2 class="eps">Prey</h2>
 					<p>
 				    Prey tracks your stolen phone/tablet and gives you full control over it like camera, GPS, SMS, e-mail etc
 					</p>
