--- a/credits.html
+++ b/credits.html
@@ -26,6 +26,9 @@
       <tr>
         <td><a href="http://nylira.com/en/">Peng Zhong</a> and <a href="https://github.com/nylira/prism-break/graphs/contributors">the contributors</a> from prism-break.org</td>        
       </tr>
+      <tr>
+        <td>Oscar for <a href="http://droid-break.info/#newsreader">FeedEx</a></td>        
+      </tr>
     </table>
     </div>
     
