--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <!-- localisation via jquery.18n.properties to come -->
   <script type="text/javascript" src="jquery.i18n.properties-min.js"></script>
   
-  <!-- Statcounter.com removed for github -->
+  <!-- Statcounter.com removed for github--->
+  
   </head>
   <body>
   <!-- Fork me on GitHub -->
@@ -359,17 +360,17 @@
 				</div>
 			</div>
       
-      <!-- Gibberbot -->
+      <!-- ChatSecure -->
       <div class="media emph-Block">
           <div class="media-Object">
 					<a href="#!" class="pic-Rounded">
-						<img src="gibberbot.png" alt="gibberbot" width="50" height="50" />
+						<img src="chatsecure.png" alt="chatsecure" width="50" height="50" />
 					</a>
 				</div>
 				<div class="media-Text">
-					<h2 class="eps">Gibberbot</h2>
+					<h2 class="eps">ChatSecure</h2>
 					<p>
-						Gibberbot is a XMPP client with OTR support developed by the <a href="https://guardianproject.info">Guardian Project</a>
+						ChatSecure is a XMPP client with OTR support developed by the <a href="https://guardianproject.info">Guardian Project</a>. It was formerly known as Gibberbot.
 					</p>
           <ul>
             <li>Price: free</li>
@@ -1417,4 +1418,3 @@
   </body>
   
 </html>
-
