--- a/support.html
+++ b/support.html
@@ -19,7 +19,7 @@
       <p>
         I moderate this page in my spare time. Since it is generously hosted for free on <a href="http://neocities.org">neocities.org</a>, I don't have to pay for a server. <br />
         The domain is around 3.50 &euro;, so this is more of a hat to flip a coin in. If you want, you can flattr me or send me bitcoins.<br />
-        Of course, you can also email me or fork this page on github and add your own apps via pull request :-)
+        Of course, you can also write an email, a <a href="https://twitter.com/droidbreak">tweet</a>, a <a href="http://droid-break.info/#disqus">disqus</a> comment or fork the project on <a href="https://github.com/repat/droid-break">github</a> and make a pull request :-)<br />
       </p>
       
       <p>
