--- a/credits.html
+++ b/credits.html
@@ -29,6 +29,9 @@
       <tr>
         <td>Oscar for <a href="http://droid-break.info/#newsreader">FeedEx</a></td>        
       </tr>
+       <tr>
+        <td>Chris for <a href="http://droid-break.info/#newsreader">RedReader</a></td>        
+      </tr>
     </table>
     </div>
     
@@ -38,7 +41,7 @@
         <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a> - Last update: 5. August 2013, 11:23
+        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a> - Last update: 5. November 2013, 11:23
       </p>
     </footer>
   </body>
