Added VLC to "Audio Players and Podcasters." Added "It is still in early beta, but playback works fine." to the VLC description. Added an entry for Tomdroid.

--- a/index.html
+++ b/index.html
@@ -640,6 +640,32 @@
         	</div>
 			</div>
       
+
+	<!-- VLC -->
+          <div class="media emph-Block">
+      	  <div class="media-Object">
+					<a href="#!" class="pic-Rounded">
+						<img src="vlc.png" alt="vlc" width="50" height="50" />
+					</a>
+				</div>
+				<div class="media-Text">
+					<h2 class="eps">VLC</h2>
+					<p>
+						VLC is a well known media player.<br />
+						It is still in early beta, but playback works fine.
+					</p>
+          <ul>
+            <li>Price: free</li>
+            <li>Min. Android version: varies</li>
+            <li><a href="http://wiki.videolan.org/Developers_Corner">Sourcecode</a></li>
+          </ul>
+          <hr />
+          <a href="https://play.google.com/store/apps/details?id=org.videolan.vlc.betav7neon"><img src="playstore.png" alt="Google Playstore"/></a>
+          <a href="https://f-droid.org/repository/browse/?fdid=org.videolan.vlc"><img src="f-droid-repository.png" alt="F-Droid repository"/></a>
+				</div>
+			</div>
+
+
            <!-- AntennaPod -->
           <div class="media emph-Block">
           <div class="media-Object">
@@ -709,7 +735,8 @@
 				<div class="media-Text">
 					<h2 class="eps">VLC</h2>
 					<p>
-						VLC is a well known media player
+						VLC is a well known media player.<br />
+						It is still in early beta, but playback works fine.
 					</p>
           <ul>
             <li>Price: free</li>
@@ -805,6 +832,32 @@
         
         <!-- Notes:Free alternative -->
         <td>
+
+          <!-- Tomdroid -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+  	      <a href="#!" class="pic-Rounded">
+		<img src="tomdroid.png" alt="Tomdroid" width="50" height="50" />
+	      </a>
+	    </div>
+	    <div class="media-Text">
+	      <h2 class="eps">Tomdroid</h2>
+	      <p>
+		A note taking application.<br />
+		A port of the popular desktop application Tomboy.<br />
+		Disclaimer: The Play store does not seem to be hosting the latest version.
+	      </p>
+              <ul>
+		<li>Price: free</li>
+		<li>Min. Android version: 1.5</li>
+		<li><a href="https://launchpad.net/tomdroid/stable">Sourcecode</a></li>
+              </ul>
+              <hr />
+              <a href="https://play.google.com/store/apps/details?id=org.tomdroid"><img src="playstore.png" alt="Google Playstore"/></a>
+              <a href="https://f-droid.org/repository/browse/?fdfilter=tomdroid&fdid=org.tomdroid"><img src="f-droid-repository.png" alt="F-Droid repository"/></a>
+	    </div>
+	  </div>
+
          <!-- OI Notepad -->
           <div class="media emph-Block">
           <div class="media-Object">
