Added min. Android version and source code to Firefox

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 					</p>
           <ul>
             <li>Price: free</li>
-            <li>Min. Android version: varies</li>
-            <li>Sourcecode</li>
+            <li>Min. Android version: 2.2</li>
+            <li><a href="https://hg.mozilla.org/" target="_blank">Sourcecode</a></li>
           </ul>
           <hr />
           <a href="https://play.google.com/store/apps/details?id=org.mozilla.firefox"><img src="playstore.png" alt="Google Playstore"/></a>
