readme and credits update

--- a/credits.html
+++ b/credits.html
@@ -32,6 +32,13 @@
        <tr>
         <td>Chris for <a href="http://droid-break.info/#newsreader">RedReader</a></td>        
       </tr>
+       <tr>
+        <td>Matthias for <a href="http://droid-break.info/#navigation">Navit</a></td>        
+      </tr>
+        <tr>
+        <td>LumenTeun for <a href="http://droid-break.info/#audio">VLC</a>, <a href="http://droid-break.info/#notes">Tomdroid</a> and <a href="http://droid-break.info/#browser">Firefox(sourcecode fix)</a></td>        
+      </tr>
+       
     </table>
     </div>
     
