Added an F-Droid link to Sipdroid.

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         <div class="media emph-Block">
       	  <div class="media-Object">
 					<a href="#!" class="pic-Rounded">
-						<img src="sipdroid.png" alt="redphone" width="50" height="50" />
+						<img src="sipdroid.png" alt="Sipdroid" width="50" height="50" />
 					</a>
 				</div>
 				<div class="media-Text">
@@ -488,6 +488,7 @@
           </ul>
           <hr />
           <a href="https://play.google.com/store/apps/details?id=org.sipdroid.sipua"><img src="playstore.png" alt="Google Playstore"/></a>
+          <a href="https://f-droid.org/repository/browse/?fdfilter=sipdroid&fdid=org.sipdroid.sipua"><img src="f-droid-repository.png" alt="F-Droid repository"/></a>
 				</div>
 			</div>
       
