--- a/index.html
+++ b/index.html
@@ -1498,7 +1498,7 @@
     <!-- Footer -->
     <footer>
       <p>
-        <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
+        <a href="index.html">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
         <a href="https://facebook.com/droidbreak" target="_blank">
