Fixed the About/Credit/Support pages. +Minor fixes.

--- a/support.html
+++ b/support.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
     <title>
-      Support - droid-break.info
+      Support - Droid-Break.info
     </title>  
-    <link href="http://groundfloor.neocities.org/default.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="brass-min.css" rel="stylesheet" type="text/css" media="all" />
+
+    <!-- Metadata -->
+    <meta charset="utr-8">
+    <link rel="shortcut icon" href="favicon.ico">
+
+    <!-- CSS -->
+    <link type="text/css" rel="stylesheet" href="style.css">
+
+    <!--JavaScript -->
+    <!-- local copy of jquery 2.0.3 -->
+    <script type="text/javascript" src="jquery-2.0.3.min.js"></script>
     <!--[if lt IE 9]> <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
-      <!-- local copy of jquery 2.0.3 -->
-  <script type="text/javascript" src="jquery-2.0.3.min.js"></script>
+
   </head>
   <body>
     <div class="txt-Center">
@@ -34,7 +41,7 @@
         <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a> - Last update: 5. August 2013, 11:23
+        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - originally built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a> - Largely rewritten by <a href="https://github.com/LumenTeun" target="_blank">LumenTeun</a> - Last update: 13 November 2013, 23:30
       </p>
     </footer>
   </body>
