--- a/not_found.html
+++ b/not_found.html
@@ -5,11 +5,13 @@
     <title>
       Site not found - droid-break.info
     </title>
-    <link href="http://groundfloor.neocities.org/default.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="brass-min.css" rel="stylesheet" type="text/css" media="all" />
-    <!--[if lt IE 9]> <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
-      <!-- local copy of jquery 2.0.3 -->
-  <script type="text/javascript" src="jquery-2.0.3.min.js"></script>
+   
+    <!-- CSS -->
+    <link href="styles.css" rel="stylesheet" type="text/css" media="all" />
+    
+    <!-- jQuery via CDN-->
+     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+     <!--[if lt IE 9]> <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
   </head>
   <body>
     <div class="txt-Center">
@@ -26,7 +28,7 @@
         <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a> - Last update: 5. August 2013, 11:23
+        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - Last update: 14 November 2013, 12:49
       </p>
     </footer>
   </body>
