--- a/sources.html
+++ b/sources.html
@@ -5,10 +5,13 @@
     <title>
       Sources - droid-break.info
     </title>
-    <link href="http://groundfloor.neocities.org/default.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="brass-min.css" rel="stylesheet" type="text/css" media="all" />
+    
+    <!-- CSS -->
+    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
+    
+    <!-- jQuery via CDN-->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <!--[if lt IE 9]> <script src="//html5shiv.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
-    <script type="text/javascript" src="jquery-2.0.3.min.js"></script>
   </head>
   <body>
   <div class="txt-Center">
@@ -73,7 +76,7 @@
         <a href="/">Home</a> - <a href="about.html">About</a> - <a href="support.html">Support</a>
       </p>
       <p>
-        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - built with <a href="http://groundfloor.neocities.org/">Groundfloor</a>, <a href="https://github.com/bleachedgraphics/Brass-Tacks">Brass-Tacks</a> and <a href="http://jquery.com/">jQuery</a> - Last update: 5. August 2013, 11:23
+        CC-BY-SA 2013 by <a href="http://repat.de">repat</a> - hosted on <a href="http://neocities.org" title="neocities">neocities.org</a> - Last update: 14. November 2013, 12:38
       </p>
     </footer>
   </body>
