Added a bigger version of the F-Droid logo and changed the source for the F-Droid logo at the bottom.

--- a/index.html
+++ b/index.html
@@ -1490,7 +1490,7 @@
 	<img src="osi_standard_logo.png" alt="OSI" class="friends" />
 	</a>
 	<a href="https://f-droid.org/" target="_blank" class="friends">
-	<img src="fdroid.png" alt="f-droid" class="friends" />
+	<img src="fdroidbig.png" alt="f-droid" class="friends" />
 	</a>
 	<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fdroidbreak.neocities.org%2F" target="_blank" class="friends">
 	<img src="html5.png" alt="valid html5" class="friends" />
