Fixed the Min. Android version numbers.
Fixed the Min. Android version numbers according to these sources:
https://wiki.mozilla.org/Mobile/Platforms/Android#System_Requirements
https://play.google.com/store/apps/details?id=com.csipsimple
https://play.google.com/store/apps/details?id=org.videolan.vlc.betav7neon
https://play.google.com/store/apps/details?id=org.openintents.filemanager
https://play.google.com/store/apps/details?id=net.osmand
https://play.google.com/store/apps/details?id=org.openintents.flashlight

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		</p>
 		<ul>
 		  <li>Price: Free</li>
-		  <li>Min. Android version: varies</li>
+		  <li>Min. Android version: 2.2</li>
 		  <li><a href="https://hg.mozilla.org/" target="_blank">Source code</a></li>
 		</ul>
 		<hr />
@@ -488,7 +488,7 @@
 		</p>
 		<ul>
 		  <li>Price: Free</li>
-		  <li>Min. Android version: varies</li>
+		  <li>Min. Android version: 1.6</li>
 		  <li><a href="http://code.google.com/p/csipsimple/" target="_blank">Source code</a></li>
 		</ul>
 		<hr />
@@ -639,7 +639,7 @@
 		</p>
 		<ul>
 		  <li>Price: Free</li>
-		  <li>Min. Android version: varies</li>
+		  <li>Min. Android version: 2.1</li>
 		  <li><a href="http://wiki.videolan.org/Developers_Corner">Source code</a></li>
 		</ul>
 		<hr />
@@ -723,7 +723,7 @@
 		</p>
 		<ul>
 		  <li>Price: Free</li>
-		  <li>Min. Android version: varies</li>
+		  <li>Min. Android version: 2.1</li>
 		  <li><a href="http://wiki.videolan.org/Developers_Corner">Source code</a></li>
 		</ul>
 		<hr />
@@ -1032,7 +1032,7 @@
 		</p>
 		<ul>
 		  <li>Price: Free</li>
-		  <li>Min. Android version: varies</li>
+		  <li>Min. Android version: 1.6</li>
 		  <li><a href="https://github.com/openintents/filemanager">Source code</a></li>
 		</ul>
 		<hr />
@@ -1131,7 +1131,7 @@
 		</p>
 		<ul>
 		  <li>Price: Free for 10 regions (unlimited regions: 5.99 &euro;)</li>
-		  <li>Min. Android version: varies</li>
+		  <li>Min. Android version: 2.1</li>
 		  <li><a href="http://code.google.com/p/osmand/">Source code</a></li>
 		</ul>
 		<hr /> 
@@ -1344,7 +1344,7 @@
 		</p>
 		<ul>
 		  <li>Price: Free </li>
-		  <li>Min. Android version: varies</li>
+		  <li>Min. Android version: 1.1</li>
 		  <li><a href="https://github.com/openintents/flashlight">Source code</a></li>
 		</ul>
 		<hr />
