--- a/index.html
+++ b/index.html
@@ -987,6 +987,30 @@
 		
 	      </div>
 	    </div> 
+
+            <!-- TTRSS-Reader -->
+            <div class="media emph-Block">
+              <div class="media-Object">
+      		<a href="#!" class="pic-Rounded">
+		  <img src="ttrss-reader.png" alt="ttrss-reader" class="floss" />
+		</a>
+	      </div>
+	      <div class="media-Text">
+		<h2 class="eps">TTRSS-Reader</h2>
+		<p>
+                  An offline reader that works with the Tiny Tiny RSS (also known as ttrss or tt-rss) web-based feed reader/aggregator.
+		</p>
+		<ul>
+		  <li>Price: Free</li>
+		  <li>Min. Android version: 2.2</li>
+		  <li><a href="http://code.google.com/p/ttrss-reader-fork/source/checkout">Source code</a></li>
+		</ul>
+		<hr />
+		<a href="https://play.google.com/store/apps/details?id=org.ttrssreader" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
+		<a href="https://f-droid.org/repository/browse/?fdfilter=ttrss&fdid=org.ttrssreader" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
+	      </div>
+	    </div> 
+
           </td>
           
 	  <!-- NewsReader:Notes -->
