tinfoil,ttrss,minor changes

--- a/not_found.html
+++ b/not_found.html
@@ -7,7 +7,7 @@
     </title>
    
     <!-- CSS -->
-    <link href="styles.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
     
     <!-- jQuery via CDN-->
      <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
