valid html,style.css fixed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
   </head>
   <body>
-    <a id="top" />
+    <a id="top"></a>
     <!-- Fork me on GitHub -->
     <a href="https://github.com/repat/droid-break" target="_blank">
       <img src="//s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" id="forkMe" />
@@ -882,7 +882,7 @@
 		</ul>
 		<hr />
 		<a href="https://play.google.com/store/apps/details?id=org.tomdroid" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
-		<a href="https://f-droid.org/repository/browse/?fdfilter=tomdroid&fdid=org.tomdroid" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
+		<a href="https://f-droid.org/repository/browse/?fdid=org.tomdroid" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
 		<a href="https://launchpad.net/tomdroid/beta/0.7.3/+download/tomdroid-0.7.3.apk" target="_blank"><img src="apk.png" alt="APK download" class="download" /></a>
 	      </div>
 	    </div>
