--- a/credits.html
+++ b/credits.html
@@ -42,7 +42,7 @@
       </tr>
       </tr>
         <tr>
-        <td>LumenTeun for the <a href="https://github.com/LumenTeun/droid-break/tree/rewrite">rewrite of HTML/CSS!</a></td>        
+        <td>LumenTeun for the <a href="https://github.com/LumenTeun/droid-break/tree/rewrite">rewrite of HTML/CSS and countless pull requests!</a></td>        
       </tr>
        
     </table>
