Fix Surespot Typo

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 	      </div>
 	    </div>
 	    
-	    <!-- Surepot -->
+	    <!-- Surespot -->
 	    <div class="media emph-Block">
               <div class="media-Object">
 		<a href="#!" class="pic-Rounded">
@@ -398,9 +398,9 @@
 		</a>
 	      </div>
 	      <div class="media-Text">
-		<h2 class="eps">surepot</h2>
+		<h2 class="eps">surespot</h2>
 		<p>
-		  surepot is an encrypting messenger that's supposed to be as easy as WhatsApp.<br />
+		  surespot is an encrypting messenger that's supposed to be as easy as WhatsApp.<br />
 		  They provide their own infrastructure so no external account is needed.
 		</p>
 		<ul>
