--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 	      <div class="media-Text">
 		<h2 class="eps">Xabber</h2>
 		<p>
-		  Xabber is a famous XMPP client with <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging">OTR</a> support.
+		  Xabber is a famous <a href="https://en.wikipedia.org/wiki/XMPP">XMPP</a> client with <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging">OTR</a> support.
 		</p>
 		<ul>
 		  <li>Price: Free (supporter version: 3 &euro;)</li>
@@ -390,28 +390,29 @@
 	      </div>
 	    </div>
 	    
-	    <!-- Surespot -->
-	    <div class="media emph-Block">
+	  
+         <!-- Surespot -->
+         <div class="media emph-Block">
               <div class="media-Object">
-		<a href="#!" class="pic-Rounded">
-		  <img src="surespot.png" alt="surespot" class="floss" />
-		</a>
-	      </div>
-	      <div class="media-Text">
-		<h2 class="eps">surespot</h2>
-		<p>
-		  surespot is an encrypting messenger that's supposed to be as easy as WhatsApp.<br />
-		  They provide their own infrastructure so no external account is needed.
-		</p>
-		<ul>
-		  <li>Price: Free</li>
-		  <li>Min. Android version: 2.2</li>
-		  <li><a href="https://github.com/surespot/android" target="_blank">Source code</a></li>
-		</ul>
-		<hr />
-		<a href="https://play.google.com/store/apps/details?id=com.twofours.surespot" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
-	      </div>
-	    </div>
+                <a href="#!" class="pic-Rounded">
+                 <img src="surespot.png" alt="surespot" class="floss" />
+                </a>
+         </div>
+         <div class="media-Text">
+                <h2 class="eps">surespot</h2>
+                <p>
+                 surespot is an encrypting messenger that's supposed to be as easy as WhatsApp.<br />
+                 They provide their own infrastructure so no external account is needed.
+                </p>
+                <ul>
+                 <li>Price: Free</li>
+                 <li>Min. Android version: 2.2</li>
+                 <li><a href="https://github.com/surespot/android" target="_blank">Source code</a></li>
+                </ul>
+                <hr />
+                <a href="https://play.google.com/store/apps/details?id=com.twofours.surespot" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
+         </div>
+         </div>
 	    
 	       <!-- Telegram -->
 	    <div class="media emph-Block">
@@ -1600,7 +1601,7 @@
 	<a href="http://neocities.org" title="neocities">
 	neocities.org
 	</a>
-	 - Last update: 14 November 2013, 12:32.
+	 - Last update: 24 November 2013, 01:52.
       </p>
       <p>
 	Logos and images are trademarked by their respective companies.
