--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
     <ul>
       <li><a href="http://www.reddit.com/r/opensource/comments/1q8g3w/droidbreakinfo_a_list_of_free_alternatives_to/">Reddit 1</a></li>
       <li><a href="http://www.reddit.com/r/fossdroid/comments/1khcnv/droidbreak_a_list_of_free_alternatives_to/">Reddit 2</a></li>
+      <li><a href="http://www.dmoz.org/Computers/Software/Operating_Systems/Android/Apps/Reviews/">DMOZ</a></li>
     </ul>
     
     <h3>Contact</h3>
