--- a/credits.html
+++ b/credits.html
@@ -38,11 +38,17 @@
         <td>Matthias for <a href="http://droid-break.info/#navigation">Navit</a></td>        
       </tr>
       <tr>
-        <td>LumenTeun for <a href="http://droid-break.info/#audio">VLC</a>, <a href="http://droid-break.info/#notes">Tomdroid</a> and <a href="http://droid-break.info/#browser">Firefox(download fix)</a></td>        
+        <td>LumenTeun for <a href="http://droid-break.info/#audio">VLC</a>, <a href="http://droid-break.info/#notes">Tomdroid</a>, <a href="http://droid-break.info/#browser">Firefox(download fix)</a>, the <a href="https://github.com/LumenTeun/droid-break/tree/rewrite">rewrite of HTML/CSS and countless pull requests!</a>
+        </td>        
+      </tr>
+       <tr>
+        <td>lgasp for  <a href="http://droid-break.info/#filemanager">Ghost Commander</a></td>        
       </tr>
       <tr>
-        <td>LumenTeun for the <a href="https://github.com/LumenTeun/droid-break/tree/rewrite">rewrite of HTML/CSS and countless pull requests!</a></td>        
+        <td>mrbiber for fixing the embarrassing surespot typo</td>        
       </tr>
+       
+
        
     </table>
     </div>
