twidere addons instead of tinfoil

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           
 	  <!-- SocialNetworks:Notes -->
           <td class="notes">
-             <p>Tinfoil might promote non-free add-ons, be careful.</p>
+             <p>Twidere might promote non-free add-ons.</p>
           </td>
 	</tr>
       </table>
