--- a/index.html
+++ b/index.html
@@ -1517,7 +1517,7 @@
 	      <div class="media-Text">
 		<h2 class="eps">FBReader</h2>
 		<p>
-		  FBReader supports the most common e-book formats as well as a couple of e-book stores. Expandable with add-ons.
+		  FBReader supports the most common e-book formats as well as a couple of e-book stores. Expandable with add-ons. Does not read PDF files yet.
 		</p>
 		<ul>
 		  <li>Price: Free </li>
@@ -1529,7 +1529,53 @@
 		<a href="https://f-droid.org/repository/browse/?fdid=org.geometerplus.zlibrary.ui.android" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
 	      </div>
 	    </div>      
-	    
+
+	    <!-- MuPDF-->
+            <div class="media emph-Block">
+              <div class="media-Object">
+		<a href="#!" class="pic-Rounded">
+  		  <img src="mupdf.png" alt="mupdf" class="floss" />
+		</a>
+	      </div>
+	      <div class="media-Text">
+		<h2 class="eps">MuPDF</h2>
+		<p>
+		  A lightweight PDF reader.
+		</p>
+		<ul>
+		  <li>Price: Free </li>
+		  <li>Min. Android version: varies</li>
+		  <li><a href="http://git.ghostscript.com/?p=mupdf.git;a=summary">Source code</a></li>
+		</ul>
+		<hr />
+		<a href="https://play.google.com/store/apps/details?id=com.artifex.mupdfdemo" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
+		<a href="https://f-droid.org/repository/browse/?fdfilter=mupdf&fdid=com.artifex.mupdfdemo" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
+	      </div>
+	    </div>      
+
+            <!-- VuDroid-->
+            <div class="media emph-Block">
+              <div class="media-Object">
+		<a href="#!" class="pic-Rounded">
+  		  <img src="vudroid.png" alt="vudroid" class="floss" />
+		</a>
+	      </div>
+	      <div class="media-Text">
+		<h2 class="eps">VuDroid</h2>
+		<p>
+		  A document reader for DjVu and PDF files.
+		</p>
+		<ul>
+		  <li>Price: Free </li>
+		  <li>Min. Android version: 1.5</li>
+		  <li><a href="http://code.google.com/p/vudroid/source/checkout">Source code</a></li>
+		</ul>
+		<hr />
+		<a href="https://play.google.com/store/apps/details?id=org.vudroid" target="_blank"><img src="playstore.png" alt="Google Playstore" class="download" /></a>
+		<a href="https://f-droid.org/repository/browse/?fdfilter=vudroid&fdid=org.vudroid" target="_blank"><img src="fdroid.png" alt="F-Droid repository" class="download" /></a>
+	      </div>
+	    </div>      
+
             <!-- Prey-->
             <div class="media emph-Block">
               <div class="media-Object">
